Add websockets support

--- a/TestFinancialService.API/appsettings.json
+++ b/TestFinancialService.API/appsettings.json
@@ -1,12 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*",
   "Binance": {
+    "Enabled": true,
     "Endpoint": "wss://stream.binance.com:443/",
     "Tickers": [ "btcusdt", "bnbeth", "ethbtc" ]
   }
